readme and healthcheck route
